Fixed basic heatmap

--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0dd73b25",
+   "id": "3a5864b9",
    "metadata": {},
    "source": [
     "# Bat Swing 3D Representation\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5fff1219",
+   "id": "4502412e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "74f562c2",
+   "id": "8c658a4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "170d6a79",
+   "id": "1d72bb73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "87740a46",
+   "id": "71232903",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026297db",
+   "id": "d355113f",
    "metadata": {},
    "source": [
     "## Graph 3D Plot for First Frame"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0cb1399e",
+   "id": "8a884a49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "16e12a76",
+   "id": "f31618ed",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "395420bb",
+   "id": "8406f1a7",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "940b1609",
+   "id": "d54144fb",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "535cfef6",
+   "id": "263f09de",
    "metadata": {},
    "source": [
     "## Use Widget to View All Frames"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9f9417fa",
+   "id": "8cdda525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "94027386",
+   "id": "e35a4b27",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da10f18b",
+   "id": "b87790f0",
    "metadata": {},
    "source": [
     "# Basic Heatmap\n",
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "d860efa6",
+   "id": "34635b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "cae25410",
+   "id": "4e3e8132",
    "metadata": {},
    "outputs": [
     {
@@ -14804,7 +14804,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "f413c379",
+   "id": "def56c93",
    "metadata": {},
    "outputs": [
     {
@@ -14823,7 +14823,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "8a00ae22",
+   "id": "f141ef08",
    "metadata": {},
    "outputs": [
     {
@@ -14842,7 +14842,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "b7e69af0",
+   "id": "ba788069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14853,7 +14853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d67123",
+   "id": "6715ffde",
    "metadata": {},
    "source": [
     "## Plot"
@@ -14862,7 +14862,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "a9c104dc",
+   "id": "67f08fa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14873,7 +14873,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "bfd66c64",
+   "id": "7f3670a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14885,8 +14885,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "abb5e55a",
+   "execution_count": 157,
+   "id": "77e757a8",
    "metadata": {
     "scrolled": true
    },
@@ -14902,6 +14902,7 @@
    ],
    "source": [
     "#change point color based on velocity\n",
+    "# I think there's a better way by setting the velocity as the 3rd parameter in the array then using cmap\n",
     "velocity = list(object['vel'] for object in final_ball)\n",
     "velocity_mag = list(np.linalg.norm(object) for object in velocity) \n",
     "print(velocity_mag)\n",
@@ -14924,8 +14925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "8e2e5a2a",
+   "execution_count": 158,
+   "id": "79605f04",
    "metadata": {},
    "outputs": [
     {
@@ -14951,12 +14952,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b68e25",
+   "id": "f781aceb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = [pos[0]]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
