--- a/Pitch Data Exploration.ipynb
+++ b/Pitch Data Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c95dec4",
+   "id": "9ca39b17",
    "metadata": {},
    "source": [
     "# Pitch Histogams\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2e10bd21",
+   "id": "0731e3ab",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a4f372be",
+   "id": "ed47db76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "93c09366",
+   "id": "865e2307",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2edf46bc",
+   "id": "97dd5f34",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "72df064e",
+   "id": "159e7df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e9ef444c",
+   "id": "d3cde0a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d8db3bd3",
+   "id": "f8cb6dd4",
    "metadata": {},
    "outputs": [
     {
@@ -1418,18 +1418,18 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "13b439fb",
+   "id": "c4c1a562",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the plot as a PNG file\n",
-    "fig.write_image(\"Pitch Initial Speed Frequency.png\", engine='kaleido')"
+    "# fig.write_image(\"Pitch Initial Speed Frequency.png\", engine='kaleido')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "98117852",
+   "id": "81ea62b4",
    "metadata": {},
    "outputs": [
     {
@@ -2468,12 +2468,12 @@
     "fig.update_traces(opacity=0.75)\n",
     "fig.show()\n",
     "\n",
-    "fig.write_image(\"Pitch Initial Speed Frequency Histogram.png\", engine='kaleido')"
+    "# fig.write_image(\"Pitch Initial Speed Frequency Histogram.png\", engine='kaleido')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1bfbe5b8",
+   "id": "584c2d11",
    "metadata": {},
    "source": [
     "## Pitch Spin Histogram"
@@ -2482,7 +2482,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b7c1a6c1",
+   "id": "40d2e417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2497,7 +2497,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "36a41f98",
+   "id": "777a4bde",
    "metadata": {},
    "outputs": [
     {
@@ -3642,12 +3642,12 @@
     "fig.update_traces(opacity=0.75)\n",
     "fig.show()\n",
     "\n",
-    "fig.write_image(\"Pitch Initial Spin Frequency Histogram.png\", engine='kaleido')"
+    "# fig.write_image(\"Pitch Initial Spin Frequency Histogram.png\", engine='kaleido')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "541d8c11",
+   "id": "a169a5d8",
    "metadata": {},
    "source": [
     "# Pitch Density Heatmap\n",
@@ -3657,7 +3657,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4a83ea61",
+   "id": "a7c84d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3668,7 +3668,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "566db9c0",
+   "id": "63a5ef16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3683,7 +3683,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "222f729b",
+   "id": "d94ae6a7",
    "metadata": {},
    "outputs": [
     {
@@ -3705,7 +3705,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a8470682",
+   "id": "49391378",
    "metadata": {},
    "outputs": [
     {
@@ -3757,7 +3757,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bddd8a1f",
+   "id": "eb082e36",
    "metadata": {},
    "outputs": [
     {
@@ -4765,12 +4765,12 @@
     "# Show the plot\n",
     "fig.show()\n",
     "\n",
-    "fig.write_image(\"Pitch Type Outcomes.png\", engine='kaleido')"
+    "# fig.write_image(\"Pitch Type Outcomes.png\", engine='kaleido')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d634a10a",
+   "id": "f7cbe56f",
    "metadata": {},
    "source": [
     "## Pitch Type and Action"
@@ -4779,7 +4779,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3fdfe7cc",
+   "id": "ac6b061c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4794,7 +4794,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7eec7e3b",
+   "id": "094a80fc",
    "metadata": {},
    "outputs": [
     {
@@ -4816,7 +4816,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1d0bc7b4",
+   "id": "6280df0f",
    "metadata": {},
    "outputs": [
     {
@@ -4875,7 +4875,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7043aade",
+   "id": "e0a3fe45",
    "metadata": {},
    "outputs": [
     {
@@ -5890,13 +5890,13 @@
     "# Show the plot\n",
     "fig.show()\n",
     "\n",
-    "fig.write_image(\"Pitch Type Action Counts.png\", engine='kaleido')"
+    "# fig.write_image(\"Pitch Type Action Counts.png\", engine='kaleido')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c625780b",
+   "id": "0a949d9a",
    "metadata": {},
    "outputs": [],
    "source": []
