--- a/hit-examine.ipynb
+++ b/hit-examine.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "id": "07931d45-1de2-4f5b-a30b-9de545393a06",
    "metadata": {},
    "outputs": [
@@ -23,20 +23,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r_/40_87j712q798z4s35dc6kh00000gn/T/ipykernel_18004/2520667032.py:74: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/r_/40_87j712q798z4s35dc6kh00000gn/T/ipykernel_18004/1508827536.py:74: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat([df, pd.DataFrame([row])], ignore_index=True)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/r_/40_87j712q798z4s35dc6kh00000gn/T/ipykernel_18004/2520667032.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     95\u001b[0m                 \u001b[0;31m# pitch_t.append(data['summary_acts']['pitch']['type'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m                 \u001b[0;31m# pitch_s.append(data['summary_acts']['pitch']['speed']['mph'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m     \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Hit Type'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Power'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Hit Type'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Fly Ball'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Hit Type'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Hard Hit Line Drive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m         \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'P_Outcome'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Bad'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'P_Outcome'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Good'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1575\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1576\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mNoReturn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1577\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1578\u001b[0m             \u001b[0;34mf\"\u001b[0m\u001b[0;34mThe truth value of a \u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m is ambiguous. \u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1579\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1580\u001b[0m         \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
      ]
     }
    ],
@@ -138,15 +126,17 @@
     "                # pitch_t.append(data['summary_acts']['pitch']['type'])\n",
     "                # pitch_s.append(data['summary_acts']['pitch']['speed']['mph'])\n",
     "            \n",
-    "for ind in df.index:\n",
-    "    if(df['Hit Type'] == 'Power' or df['Hit Type'] == 'Fly Ball' or df['Hit Type'] == 'Hard Hit Line Drive'):\n",
-    "        df['P_Outcome'] = 'Bad'\n",
-    "    else: df['P_Outcome'] = 'Good'"
+    "# for ind in df.index:\n",
+    "#     if(df['Hit Type'][ind] == 'Power' or df['Hit Type'][ind] == 'Fly Ball' or df['Hit Type'][ind] == 'Hard Hit Line Drive'):\n",
+    "#         df['P_Outcome'] = 'Bad'\n",
+    "#     else: df['P_Outcome'] = 'Good'\n",
+    "\n",
+    "df[\"Good\"] = ~(df[\"Hit Type\"] == \"Power\") & ~(df[\"Hit Type\"] == \"Hard Hit Line Drive\") & ~(df[\"Hit Type\"] == \"Fly Ball\") & ~(df[\"Hit Type\"] == \"Hard Hit Ground Ball\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "id": "54f62186-1692-4750-93ba-74f2e6165fa3",
    "metadata": {
     "scrolled": true
@@ -176,6 +166,7 @@
        "      <th>Hit Type</th>\n",
        "      <th>Pitch Type</th>\n",
        "      <th>Pitch Speed</th>\n",
+       "      <th>Good</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -184,33 +175,39 @@
        "      <td>Strike</td>\n",
        "      <td>Slider</td>\n",
        "      <td>84.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Strike</td>\n",
        "      <td>Curveball</td>\n",
        "      <td>79.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Strike</td>\n",
        "      <td>Curveball</td>\n",
        "      <td>78.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Light Ground Ball</td>\n",
        "      <td>Sinker</td>\n",
        "      <td>94.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Strike</td>\n",
        "      <td>Curveball</td>\n",
        "      <td>79.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -220,51 +217,56 @@
        "      <td>Strike</td>\n",
        "      <td>Sinker</td>\n",
        "      <td>90.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
        "      <td>Strike</td>\n",
        "      <td>FourSeamFastball</td>\n",
        "      <td>91.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>150</th>\n",
        "      <td>Strike</td>\n",
        "      <td>Changeup</td>\n",
        "      <td>84.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
        "      <td>Strike</td>\n",
        "      <td>Curveball</td>\n",
        "      <td>77.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>152</th>\n",
        "      <td>Strike</td>\n",
        "      <td>Slider</td>\n",
        "      <td>81.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>153 rows × 3 columns</p>\n",
+       "<p>153 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Hit Type        Pitch Type  Pitch Speed\n",
-       "0               Strike            Slider         84.0\n",
-       "1               Strike         Curveball         79.0\n",
-       "2               Strike         Curveball         78.0\n",
-       "3    Light Ground Ball            Sinker         94.0\n",
-       "4               Strike         Curveball         79.0\n",
-       "..                 ...               ...          ...\n",
-       "148             Strike            Sinker         90.0\n",
-       "149             Strike  FourSeamFastball         91.0\n",
-       "150             Strike          Changeup         84.0\n",
-       "151             Strike         Curveball         77.0\n",
-       "152             Strike            Slider         81.0\n",
+       "              Hit Type        Pitch Type  Pitch Speed  Good\n",
+       "0               Strike            Slider         84.0  True\n",
+       "1               Strike         Curveball         79.0  True\n",
+       "2               Strike         Curveball         78.0  True\n",
+       "3    Light Ground Ball            Sinker         94.0  True\n",
+       "4               Strike         Curveball         79.0  True\n",
+       "..                 ...               ...          ...   ...\n",
+       "148             Strike            Sinker         90.0  True\n",
+       "149             Strike  FourSeamFastball         91.0  True\n",
+       "150             Strike          Changeup         84.0  True\n",
+       "151             Strike         Curveball         77.0  True\n",
+       "152             Strike            Slider         81.0  True\n",
        "\n",
-       "[153 rows x 3 columns]"
+       "[153 rows x 4 columns]"
       ]
      },
      "metadata": {},
